--- a/mystyle.css
+++ b/mystyle.css
@@ -1,4 +1,22 @@
 body {
-  color: rgb(113, 57, 57);
+  color: rgb(0, 0, 0);
   font-size: huge;
+}
+th {
+    border: 3px solid rgb(22, 2, 72);
+    padding: 20px;
+}
+
+td {
+    border: 1px solid rgb(173, 191, 219);
+    padding: 5px 20px;
+}
+div.infos-principales{
+    font-size : 100px;
+    text-align: center;
+}
+
+table{
+    table-layout: fixed;
+    width: 70%;
 }
