--- a/mystyle.css
+++ b/mystyle.css
@@ -20,3 +20,11 @@ table{
     table-layout: fixed;
     width: 70%;
 }
+
+.image{
+   float: right;
+    margin-right: 8%; 
+}
+div.infos-secondaires{
+    text-align: right;
+}
