--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,8 @@
 body {
   color: rgb(0, 0, 0);
   font-size: huge;
+  display: flex;
+  flex-wrap: wrap;
 }
 th {
     border: 3px solid rgb(22, 2, 72);
@@ -12,8 +14,10 @@ td {
     padding: 5px 20px;
 }
 div.infos-principales{
-    font-size : 100px;
+    
+    font-size : 50px;
     text-align: center;
+    
 }
 
 table{
@@ -22,9 +26,24 @@ table{
 }
 
 .image{
-   float: right;
-    margin-right: 8%; 
+    margin-bottom: 10px; 
 }
 div.infos-secondaires{
-    text-align: right;
+    text-align: center;
+    margin-right : 0 ;
+    width : 100%;
+    word-wrap: break-word;
+}
+.bloc-infos{
+    position : sticky;
+    top : 6px;
+    float : right;
+    margin-right : 10%;
+    width : 135px;
+    text-align : center;
+    
+}
+.image-head{
+    margin-left : 20%;
+      
 }
